...
                      color: Theme.of(context).colorScheme.surfaceTint,
                      borderType: BorderType.RRect,
                      dashPattern: const [12, 6],
                      radius: const Radius.circular(8),
                      strokeCap: StrokeCap.round,
                      child: Container(
                        key: const Key("add-task-container-button"),
                        padding: const EdgeInsets.symmetric(vertical: 48 * 1.5),
                        decoration: BoxDecoration(
                          color: Theme.of(context)
                              .colorScheme
                              .surfaceTint
                              .withOpacity(0.1),
...
