...
                          Text("Archive"),
                          Spacer(),
                          Icon(CupertinoIcons.archivebox)
                        ],
                      )),
                  CupertinoContextMenuAction(
                    key: const Key("delete-task-context-menu-button"),
                    isDestructiveAction: true,
                    onPressed: () {
                      context.read<TaskBloc>().add(TaskRemoved(id: task.id));
                      Navigator.of(context).pop();
                    },
                    child: const Row(
...
