...
            setPriority: (priority) => taskPriority = priority,
          ),
        ),
      ),
      bottomNavigationBar: BottomAppBar(
        child: CupertinoButton.filled(
            key: const Key("add_task_screen_bottom_app_bar_button"),
            child: Text(widget.task == null ? "Add Task" : "Update Task"),
            onPressed: () {
              widget.task == null ? _addTask() : _updateTask();
              Navigator.of(context).pop();
            }),
      ),
...
